# snomed-neo4j

./: .gitignore  Dockerfile  Dockerfile.importer  Dockerfile.standalone  Justfile  README.md  create_standalone.sh  docker-compose.yml  pyproject.toml
.github/workflows/: python-package-client.yml
client/: __init__.py  snomed_client.py
config/: neo4j.conf
scripts/: create_slim_db.py  download_snomed.py  entrypoint.sh  load_snomed.py
scripts/utils/: __init__.py  neo4j_utils.py  snomed_utils.py
snomed_neo4j/: client.py  download.py  slim.py
tests/: conftest.py  test_create_slim_db.py  test_download_snomed.py  test_load_snomed.py  test_neo4j_utils.py  test_snomed_utils.py
