[project]
name = "snomed-neo4j"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.11.12", "pytest>=7.4.0", "pytest-mock>=3.11.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"


[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "B",
    "UP",
    "F401",
    "RUF022",
    "C4",
    "FA",
    "PIE",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "SLOT",
    "PERF",
    "ANN",
]
ignore = ["E203", "E501", "ANN003"]

[tool.ruff.format]

[tool.uv.workspace]
members = [
    "packages/snomed-neo4j-core",
    "packages/snomed-neo4j-client",
    "packages/snomed-neo4j-langchain",
]

[tool.uv.sources]
snomed_neo4j_core = { workspace = true }
